Closed
Bug 888693
Opened 12 years ago
Closed 12 years ago
Taking a memory report on b2g crashes the phone, after bug 846019
Categories
(Firefox OS Graveyard :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: justin.lebar+bug, Assigned: justin.lebar+bug)
References
Details
(Keywords: crash, Whiteboard: [b2g-crash])
Attachments
(1 file)
|
862 bytes,
patch
|
nmaier
:
review+
|
Details | Diff | Splinter Review |
b2g doesn't have an add-ons manager, missing a null check.
Patch in a moment.
| Assignee | ||
Comment 1•12 years ago
|
||
Attachment #769455 -
Flags: review?(MaierMan)
Comment 2•12 years ago
|
||
Comment on attachment 769455 [details] [diff] [review]
Patch, v1
Review of attachment 769455 [details] [diff] [review]:
-----------------------------------------------------------------
Oops, that null check is definitely missing.
Attachment #769455 -
Flags: review?(MaierMan) → review+
Updated•12 years ago
|
Severity: normal → critical
Keywords: crash
OS: All → Gonk (Firefox OS)
Hardware: All → ARM
Whiteboard: [b2g-crash]
| Assignee | ||
Comment 3•12 years ago
|
||
Thanks for the review!
https://hg.mozilla.org/integration/mozilla-inbound/rev/3c993adfab9c
Comment 4•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Updated•12 years ago
|
Assignee: nobody → justin.lebar+bug
You need to log in
before you can comment on or make changes to this bug.
Description
•