Bug 888693 - Add a null-check to nsWindowMemoryReporter.cpp so taking a memory report doesn't crash B2G. r=nmaier